@@ -8,6 +8,7 @@ Changelog
 - Fix typo in favorite error message. [njohner]
 - Only display .docx files as possible proposal documents. [Rotonen]
 - Fix task revoking permissions on close/reassign. [phgross]
+- Fix an issue with missing zip after concurrent demand callback requests. [deiferni]
 
 
 2018.5.4 (2018-12-06)
